Document optional dependencies